--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Div creates a breaks in the HTML to create buckets to work in</li>
+          <li>br creates a line break in the pages for spacing.</li>     
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Git status: descirbes the branch that we are currently in</li>
+          <li>Git checkout -b branch-name: creates a new branch</li>
+          <li>Git checkout branch-name navigates to that branch</li>
+          <li>Git Pull Origin branch-name pulls the branch information down</li>
+          <li>Git push origin branch-name pushes the branch information back into the main branch</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
+
     </main>
 
     <footer>
