--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>There are so many things in JavaScript to learn! the key is to go slow!!</li>
         </ul>
       </section>
 
